--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,12 @@
 {
     "version": 2,
     "builds": [
-        {"src": "pdf2audio.py", "use": "@vercel/python"}
+      {"src": "/static/(.*)", "use": "@vercel/static-build"},
+      {"src": "pdf2audio.py", "use": "@vercel/python"}
     ],
     "routes": [
-        {"src": "/(.*)", "dest": "pdf2audio.py"}
+      {"src": "/static/(.*)", "dest": "/static/$1"},
+      {"src": "/(.*)", "dest": "pdf2audio.py"}
     ]
-}
+  }
+  
